<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Contactus">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/about_the_app"
                    android:background="#03A9F4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="6dp"
                    android:text="@string/open_the_app_it_displays_the_mainactivity_for_calculations"
                    android:textSize="21dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="106dp"
                    android:layout_gravity="center"
                    android:src="@drawable/chart"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="6dp"
                    android:text="@string/input_the_length_width_and_price_per_unit_in_home_click_on_the_calculate_button_to_view_the_total_cost"
                    android:textSize="21dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="6dp"
                    android:text="@string/click_on_the_view_saved_data_button_in_home_it_opens_the_saved_data_containing_a_list_of_saved_projects"
                    android:textSize="21dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="6dp"
                    android:text="@string/in_saveddata_click_on_any_item_to_view_detailed_project_information_opened_details_allows_users_to_delete_the_specific_entry_if_needed"
                    android:textSize="21dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/contact"
                    android:background="#03A9F4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>

                <Button
                    android:id="@+id/btnMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:layout_gravity="center"
                    android:backgroundTint="#E11919"
                    android:text="@string/mail_us" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/follow_us_on"
                    android:background="#03A9F4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/imgLink"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/linkedin"/>
                    <ImageView
                        android:id="@+id/imgX"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/twitter"/>
                    <ImageView
                        android:id="@+id/imgGithub"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/github"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/created_by_ankur_kushwaha"
            android:textSize="20dp"
            android:gravity="center"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sprout"/>
    </LinearLayout>
</ScrollView>
