<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9EB4C6"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolback"
        app:title="Details"
        app:titleTextColor="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        android:layout_alignParentTop="true"
        />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_below="@id/toolDetail"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center">
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               app:cardElevation="10dp"
               app:cardCornerRadius="14dp"
               android:backgroundTint="@color/white">
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="180dp"
                   android:layout_gravity="center"
                   android:src="@drawable/chart"/>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               app:cardElevation="10dp"
               app:cardCornerRadius="14dp"
               android:backgroundTint="@color/white">
               <TableLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="12dp">
                   <TableRow
                       android:layout_marginTop="10dp">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/date"
                           android:textStyle="bold"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"/>
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/date"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"
                           android:id="@+id/detailDate"/>
                   </TableRow>
                   <TableRow
                       android:layout_marginTop="5dp">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/length"
                           android:textStyle="bold"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/length"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"
                           android:id="@+id/detailLength"/>
                   </TableRow>
                   <TableRow
                       android:layout_marginTop="5dp">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/width"
                           android:textStyle="bold"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/width"
                           android:id="@+id/detailWidth"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"/>
                   </TableRow>
                   <TableRow
                       android:layout_marginTop="5dp">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:text="@string/unit_price1"
                           android:textColor="@color/black"
                           android:textSize="22dp"
                           android:textStyle="bold" />
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/unit_price"
                           android:id="@+id/detailPrice"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"/>
                   </TableRow>
                   <TableRow
                       android:layout_marginTop="5dp">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/total"
                           android:textStyle="bold"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/total"
                           android:id="@+id/detailResult"
                           android:textColor="@color/black"
                           android:layout_weight="1"
                           android:textSize="22dp"/>
                   </TableRow>
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="34dp"
                       android:gravity="center">
                       <Button
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/btnDelete"
                           android:text="@string/delete"/>
                   </LinearLayout>
               </TableLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
   </ScrollView>

</RelativeLayout>