<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:layout_margin="3dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/row11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold"
                android:gravity="start"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:gravity="start"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18dp"
                android:id="@+id/showDate"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:id="@+id/showLength"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/width"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/width"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:id="@+id/showWidth"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_price"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_price"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:id="@+id/showPPU"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:id="@+id/showResult"/>
            </LinearLayout>
        </LinearLayout>
<!--        <Button-->
<!--            android:id="@+id/deleteData"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:layout_margin="10dp"-->
<!--            android:text="Delete"-->
<!--            android:drawableLeft="@drawable/baseline_delete_24"/>-->
    </LinearLayout>
</androidx.cardview.widget.CardView>